# vanity

./: LICENSE  README.md  flake.nix  meson.build  meson.format  style.scss  uncrustify.cfg
.githooks/: pre-commit
data/: meson.build  vanity.gresource.xml
data/icons/: README.md
data/scss/: _bar.scss  _colors.scss  _menu.scss  _notification.scss  _notifications.scss  _osd.scss  _player.scss  _weather.scss  main.scss  meson.build
data/ui/: bar-notify.blp  bar.blp  confirmation-button.blp  menu-audio-row.blp  menu-audio.blp  menu-hud.blp  menu-idle.blp  menu-selector.blp  menu-system-controls.blp  menu-weather-forecast.blp  menu-weather.blp  menu.blp  meson.build  notification.blp  notifications.blp  osd.blp  player-stub.blp  player.blp  sync-marquee.blp
nix/libglycin/: README.md  fix-glycin-deps.patch  fix-glycin-env.patch  fix-glycin-paths.patch  glycin-shim.patch  libglycin-shim.nix  libglycin.nix
src/: app.vala  main.vala  meson.build
src/bar/: bar-notify.vala  bar.vala  hyprland-workspaces.vala  hyprlandWorkspaces.vala  meson.build  tray.vala
src/lib/: meson.build
src/lib/brightness/: device.vala  ifaces.vala  meson.build
src/lib/dbus-ifaces/: meson.build  org-freedesktop-login1.vala
src/lib/idle/: inhibitor.vala  meson.build
src/lib/io/: image.vala  meson.build  process.vala
src/lib/nightlight/: meson.build  nightlight.vala
src/lib/notification/: meson.build  notification-manager.vala
src/lib/sunset/: meson.build  sunset.vala
src/lib/systemd/: ifaces.vala  meson.build
src/lib/time/: meson.build  util.vala
src/lib/weather/: forecast.vala  geoclue-location.vala  meson.build  weather.vala
src/lib/yubikey-touch-detector/: detector.vala  ifaces.vala  meson.build
src/menu/: confirmation-button.vala  menu-audio-row.vala  menu-audio.vala  menu-hud.vala  menu-idle.vala  menu-selector.vala  menu-system-controls.vala  menu-weather-forecast.vala  menu-weather.vala  menu.vala  meson.build  player-stub.vala  player.vala
src/module/: meson.build  sync-marquee.vala
src/notification/: meson.build  notification.vala
src/notifications/: meson.build  notification.vala  notifications.vala
src/osd/: meson.build  osd.vala
src/vapi/: glycin-1.vapi  glycin-gtk4-1.vapi  meson.build
